# atomas

./: CONTRIBUTING.md  Cargo.toml  README.md
crates/atomas-core/: Cargo.toml
crates/atomas-core/src/elements/: data.rs
crates/atomas-core/src/ring/: circularlist.rs
crates/atomas-cv/: Cargo.toml
crates/atomas-cv/src/: bbox.rs  lib.rs
crates/atomas-cv/src/detection/: config.rs  detector.rs  mod.rs
crates/atomas-cv/src/template/: loader.rs  matcher.rs  mod.rs
crates/atomas-cv/src/utils/: image.rs  mod.rs  nms.rs
docker/: Dockerfile  Dockerfile.gpu
docker/scripts/: delete_avds.sh  entrypoint.sh  install-sdk.sh  start-emulator.sh
src/: main.rs  parser.rs
tests/: core_tests.rs
