[package]
name = "atomas-cv"
version = "0.1.0"
edition = "2021"

[dependencies]
atomas-core = { path = "../atomas-core" }
opencv = { version = "0.92.2", default-features = false, features = ["imgproc", "imgcodecs"] }
opencv-match = { git = "https://github.com/preco21/opencv-match.git", version = "0.1.0" }
image = "0.25"
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Optional dependencies
rayon = { version = "1.8", optional = true }

[features]
default = []
parallel = ["rayon"]
