[package]
name = "atomas-cv"
version = "0.1.0"
edition = "2024"

[dependencies]
atomas-core = { path = "../atomas-core" }
opencv = { version = "0.92.2", default-features = false, features = ["imgproc", "imgcodecs"] }
opencv-match = { git = "https://github.com/preco21/opencv-match.git", version = "0.1.0" }
image = "0.25.6"
anyhow = "1.0.98"
thiserror = "2.0.12"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

# Optional dependencies
rayon = { version = "1.10.0", optional = true }

[features]
default = []
parallel = ["rayon"]
